--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react4tv/smart-tv-platform",
+  "name": "@ott-smarttv/util-native",
   "version": "1.0.0",
   "license": "MIT",
   "description": "Util detect platform SmartTV",
@@ -13,7 +13,7 @@
     "prepack": "yarn build",
     "prebuild": "yarn clean",
     "build": "rollup -c",
-    "clean": "rimraf lib @react4tv/smart-tv-platform-*.tgz",
+    "clean": "rimraf lib @ott-smarttv/util-native-*.tgz",
     "watch": "rollup -cw",
     "generate-html": "npx typedoc --out docs",
     "generate-md": "npx typedoc --plugin typedoc-plugin-markdown --out markdown"
@@ -46,13 +46,13 @@
     "typescript": "^4.2.4"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/react-4-smart-tv/smart-tv-platform.git"
+    "type": "git", 
+    "url": "git+https://github.com/ott-smarttv/util-native.git"
   },
   "bugs": {
-    "url": "https://github.com/react-4-smart-tv/smart-tv-platform/issues"
+    "url": "https://github.com/ott-smarttv/util-native/issues"
   },
-  "homepage": "https://github.com/react-4-smart-tv/smart-tv-platform#readme",
+  "homepage": "https://github.com/ott-smarttv/util-native.git#readme",
   "dependencies": {
     "eventemitter3": "^5.0.1"
   }
